--- a/application/index/view/public/header.html
+++ b/application/index/view/public/header.html
@@ -5,7 +5,7 @@
     <title>{$title|default="页面标题"}</title>
     <!--tp5新标签-->
     {load href="/static/css/bootstrap.css"/}
-    {load href="/static/js/jquery-3.3.1.min.js"/}
+    {load href="https://code.jquery.com/jquery-3.3.1.min.js"/}
     {load href="/static/js/bootstrap.js"/}
 
 </head>
@@ -20,7 +20,7 @@
                 <a class="navbar-brand" href="#">Brand</a>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <p class="navbar-text" style="font-size: 20px">在线学习考试系统</p>
+                    <!--<p class="navbar-text" style="font-size: 20px">在线学习考试系统</p>-->
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Link</a></li>
                         <li class="dropdown">
