--- a/application/index/view/public/header.html
+++ b/application/index/view/public/header.html
@@ -5,7 +5,7 @@
     <title>{$title|default="页面标题"}</title>
     <!--tp5新标签-->
     {load href="/static/css/bootstrap.css"/}
-    {load href="https://code.jquery.com/jquery-3.3.1.min.js"/}
+    {load href="/static/js/jquery.min.js"/}
     {load href="/static/js/bootstrap.js"/}
 
 </head>
@@ -22,18 +22,24 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <!--<p class="navbar-text" style="font-size: 20px">在线学习考试系统</p>-->
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Link</a></li>
+                        {if $Think.session.user_id}
+                        <li><a href="#">{$Think.session.user_name}</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                               aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                               aria-haspopup="true" aria-expanded="false">操作 <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
+                                {if $Think.session.is_admin==1}
+                                <li><a href="#">管理后台</a></li>
+                                {/if}
+                                <li><a href="{:url('user/logout')}">退出登录</a></li>
                             </ul>
                         </li>
+                        {else/}
+
+                        <li><a href="{:url('user/login')}">登录</a></li>
+                        <li><a href="{:url('user/register')}">注册</a></li>
+
+                        {/if}
                     </ul>
                 </div>
             </div>
