--- a/application/index/view/user/login.html
+++ b/application/index/view/user/login.html
@@ -3,12 +3,8 @@
 
     <div class="col-md-4"></div>
     <div class="col-md-4">
-        <h2 style="margin-bottom: 20px">用户注册</h2>
+        <h2 style="margin-bottom: 20px">用户登录</h2>
         <form method="post" id="login">
-            <div class="form-group">
-                <label for="exampleInputEmail1">用户名</label>
-                <input name="name" class="form-control" id="exampleInputEmail1" placeholder="用户名">
-            </div>
             <div class="form-group">
                 <label for="exampleInputEmail2">邮箱</label>
                 <input name="email" class="form-control" id="exampleInputEmail2" placeholder="邮箱">
@@ -17,12 +13,8 @@
                 <label for="exampleInputEmail3">密码</label>
                 <input type="password" name="password" class="form-control" id="exampleInputEmail3" placeholder="密码">
             </div>
-            <div class="form-group">
-                <label for="exampleInputPassword4">确认密码</label>
-                <input type="password" name="password_confirm" class="form-control" id="exampleInputPassword4" placeholder="确认密码">
-            </div>
 
-            <button type="button" class="btn btn-primary" id="register">注册</button><span id="message" style="margin-left:20px;color: red"></span>
+            <button type="button" class="btn btn-primary" id="submit">登录</button><span id="message" style="margin-left:20px;color: red"></span>
         </form>
 
     </div>
@@ -31,15 +23,14 @@
 
 <script>
     $(function () {
-        $("#register").on('click', function () {
+        $("#submit").on('click', function () {
             // alert($('#login').serialize());
             $.ajax({
                 type: 'post',
-                url: "{:url('index/user/insert')}",
+                url: "{:url('index/user/loginCheck')}",
                 data: $('#login').serialize(),
                 dataType: 'json',
                 success: function (data) {
-                    console.log(data)
                     switch (data.status) {
                         case 1:
                             alert(data.message)
