--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,4 +1,23 @@
 {include file="public:header"/}
 {include file="public:nav"/}
-            <div class="col-md-10">右面</div>
+<style>
+    .subject {
+        height: 130px;
+        background-color: #FFFFFF;
+        border: 1px solid #e6e6e6;
+        border-bottom: 1px solid #bfbfbf;
+        margin-bottom: 15px;
+        list-style: none;
+    }
+</style>
+<div class="col-md-10">
+
+    <ul>
+        <li class="col-md-10 subject"></li>
+        <li class="col-md-10 subject"></li>
+        <li class="col-md-10 subject"></li>
+        <li class="col-md-10 subject"></li>
+        <li class="col-md-10 subject"></li>
+    </ul>
+</div>
 {include file="public:footer"/}
