--- a/application/admin/view/public/header.html
+++ b/application/admin/view/public/header.html
@@ -17,21 +17,19 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <!--这里放logo-->
-                <a class="navbar-brand" href="#">Brand</a>
+                <!--<a class="navbar-brand" href="#">Brand</a>-->
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <!--<p class="navbar-text" style="font-size: 20px">在线学习考试系统</p>-->
-                    <ul class="nav navbar-nav navbar-right">
+                    <p class="navbar-text" style="font-size: 24px">后台管理系统</p>
+                    <ul class="nav navbar-nav navbar-right" style="margin-top: 10px">
                         {if $Think.session.user_id}
-                        <li><a href="#">{$Think.session.user_name}</a></li>
+                        <li><a href="#" style="font-size: 18px">{$Think.session.user_name}</a></li>
+                        <li><a href="{:url('/')}" style="font-size: 18px">回到前台</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                               aria-haspopup="true" aria-expanded="false">操作 <span class="caret"></span></a>
+                               aria-haspopup="true" aria-expanded="false" style="font-size: 18px">操作 <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                {if $Think.session.is_admin==1}
-                                <li><a href="/admin">管理后台</a></li>
-                                {/if}
-                                <li><a href="{:url('user/logout')}">退出登录</a></li>
+                                <li><a href="{:url('/index/user/logout')}">退出登录</a></li>
                             </ul>
                         </li>
                         {else/}
