--- a/application/admin/view/public/header.html
+++ b/application/admin/view/public/header.html
@@ -24,19 +24,14 @@
                     <ul class="nav navbar-nav navbar-right" style="margin-top: 10px">
                         {if $Think.session.user_id}
                         <li><a href="#" style="font-size: 18px">{$Think.session.user_name}</a></li>
-                        <li><a href="{:url('/')}" style="font-size: 18px">回到前台</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                aria-haspopup="true" aria-expanded="false" style="font-size: 18px">操作 <span class="caret"></span></a>
                             <ul class="dropdown-menu">
+                                <li><a href="{:url('/')}">回到前台</a></li>
                                 <li><a href="{:url('/index/user/logout')}">退出登录</a></li>
                             </ul>
                         </li>
-                        {else/}
-
-                        <li><a href="{:url('user/login')}">登录</a></li>
-                        <li><a href="{:url('user/register')}">注册</a></li>
-
                         {/if}
                     </ul>
                 </div>
