--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -6,7 +6,7 @@
 </ul>
 
 <ul class="nav nav-pills nav-stacked">
-    <li class="nav-header h3">新建题目</li>
-    <li><a href="#">新建选择题</a></li>
+    <li class="nav-header h3">题目管理</li>
+    <li><a href="{:url('question/add')}">新建题目</a></li>
     <li><a href="#">新建判断题</a></li>
 </ul>
