--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -8,5 +8,5 @@
 <ul class="nav nav-pills nav-stacked">
     <li class="nav-header h3">题目管理</li>
     <li><a href="{:url('question/add')}">新建题目</a></li>
-    <li><a href="#">新建判断题</a></li>
+    <li><a href="{:url('question/questionlist')}">题目列表</a></li>
 </ul>
