--- a/application/index/view/public/header.html
+++ b/application/index/view/public/header.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <h4 class="navbar-text" style="margin-right: 30px">在线学习考试系统</h4>
+                    <h4 class="navbar-text" style="margin-right: 30px">在线学习系统</h4>
                     <ul class="nav navbar-nav">
                         {volist name="cate" id="cate"}
                         <li
@@ -29,7 +29,7 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         {if $Think.session.user_id}
-                        <li><a href="#">{$Think.session.user_name}</a></li>
+                        <li><a>{$Think.session.user_name}</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                aria-haspopup="true" aria-expanded="false">操作 <span class="caret"></span></a>
