--- a/application/admin/view/user/userlist.html
+++ b/application/admin/view/user/userlist.html
@@ -25,6 +25,8 @@
     </tr>
     {/volist}
 </table>
+<!--分页-->
+<div class="text-center">{$questionList|raw}</div>
 <script>
     function isDelete() {
         if (confirm('确认删除')) {
