--- a/application/admin/view/video/videolist.html
+++ b/application/admin/view/video/videolist.html
@@ -2,18 +2,20 @@
 <h4 class="text-center">用户列表</h4>
 <table class="table table-hover text-center">
     <tr>
-        <td>ID</td>
+        <td>序号</td>
         <td>题目标题</td>
         <td>操作</td>
     </tr>
     {volist name="$videoList" id="video"}
     <tr>
-        <td>{$video.id}</td>
+        <td>{$key+1}</td>
         <td width="500px">{$video.title}</td>
         <td><a href="{:url('video/doDelete',['id'=>$video.id])}" onclick="return isDelete();">删除</a></td>
     </tr>
     {/volist}
 </table>
+<!--分页-->
+<div class="text-center">{$videoList|raw}</div>
 <script>
     function isDelete() {
         if (confirm('确认删除')) {
