--- a/application/admin/view/user/userlist.html
+++ b/application/admin/view/user/userlist.html
@@ -26,7 +26,7 @@
     {/volist}
 </table>
 <!--分页-->
-<div class="text-center">{$questionList|raw}</div>
+<div class="text-center">{$userList|raw}</div>
 <script>
     function isDelete() {
         if (confirm('确认删除')) {
