--- a/application/index/view/index/videolist.html
+++ b/application/index/view/index/videolist.html
@@ -13,6 +13,6 @@
             </li>
             {/volist}
         </ul>
-        <div class="text-center">{$testData|raw}</div>
+        <div class="text-center">{$page|raw}</div>
     </div>
 {include file="public:footer"/}
