--- a/application/admin/view/exam/examList.html
+++ b/application/admin/view/exam/examList.html
@@ -6,16 +6,16 @@
         <td>题目标题</td>
         <td>操作</td>
     </tr>
-    {volist name="$videoList" id="video"}
+    {volist name="$examList" id="exam"}
     <tr>
         <td>{$key+1}</td>
-        <td width="500px">{$video.title}</td>
-        <td><a href="{:url('video/doDelete',['id'=>$video.id])}" onclick="return isDelete();">删除</a></td>
+        <td width="500px">{$exam.name}</td>
+        <td><a href="{:url('exam/doDelete',['id'=>$exam.id])}" onclick="return isDelete();">删除</a></td>
     </tr>
     {/volist}
 </table>
 <!--分页-->
-<div class="text-center">{$videoList|raw}</div>
+<div class="text-center">{$examList|raw}</div>
 <script>
     function isDelete() {
         if (confirm('确认删除')) {
