--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -16,3 +16,7 @@
     <li><a href="{:url('video/addVideo')}">新建视频</a></li>
     <li><a href="{:url('video/videolist')}">视频列表</a></li>
 </ul>
+<ul class="nav nav-pills nav-stacked">
+    <li class="nav-header h3">试卷管理</li>
+    <li><a href="{:url('exam/examList')}">试卷列表</a></li>
+</ul>
