--- a/application/admin/view/user/addStudent.html
+++ b/application/admin/view/user/addStudent.html
@@ -3,11 +3,11 @@
         <form method="post" id="login">
             <div class="form-group">
                 <label for="exampleInputEmail1">用户名</label>
-                <input name="name" class="form-control" id="exampleInputEmail1" placeholder="用户名">
+                <input name="name" class="form-control" id="exampleInputEmail1" placeholder="用户名" value="">
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail2">邮箱</label>
-                <input name="email" class="form-control" id="exampleInputEmail2" placeholder="邮箱">
+                <input name="email" class="form-control" id="exampleInputEmail2" placeholder="邮箱" value="">
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail3">密码</label>
