--- a/application/index/view/public/header.html
+++ b/application/index/view/public/header.html
@@ -19,6 +19,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <h4 class="navbar-text" style="margin-right: 30px">在线学习系统</h4>
                     <ul class="nav navbar-nav">
+                        <!--volist是tp5的循环标签-->
                         {volist name="cate" id="cate"}
                         <li
                                 {eq name="$cate.id" value="$Request.param.cate_id" }
