--- a/application/admin/view/question/add.html
+++ b/application/admin/view/question/add.html
@@ -78,6 +78,12 @@
                 </select>
             </div>
         </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label">试题分数 :</label>
+            <div class="col-sm-9">
+                <input class="form-control" id="questionScore"  name="title" />
+            </div>
+        </div>
         <div class="question-setting-wrapper">
             <div class="question-type-pane active" data-type="1">
                 <div class="form-group">
@@ -168,6 +174,7 @@
 
                 formData["title"] = form.find('[name="title"]').val();
                 formData["options"] = questionData.options|| "";
+                formData["score"]=form.find('#questionScore').val();
                 formData["answer"] = questionData.answer||"";
                 formData["type"] = questionType;
                 formData["name"] = typeName;
