--- a/application/index/view/index/briefanswer.html
+++ b/application/index/view/index/briefanswer.html
@@ -11,7 +11,7 @@
             <!--简答题列表-->
             <div>
                 <p>解析：</p>
-                <p>{$test.analysis}</p>
+                <p>{$test.answer}</p>
             </div>
         </div>
         {/volist}
