--- a/application/index/view/index/examdetail.html
+++ b/application/index/view/index/examdetail.html
@@ -71,7 +71,7 @@
 
 
         if (isWhitePaper) {
-            alert("你没做完啊")
+            alert("有题目未完成")
         } else {
             let Sum = 0;
             let error = [];
