--- a/application/index/view/public/header.html
+++ b/application/index/view/public/header.html
@@ -19,10 +19,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <h4 class="navbar-text" style="margin-right: 30px"><a style="text-decoration: none"
                                                                           href="{:url('/')}">在线学习系统</a></h4>
-
-                    <div class="navbar-text" id="classShow" style="display: inline-flex">
-                        <h4  style="margin-right: 30px">学习</h4>
-                        <ul class="nav navbar-nav" id="SecondClass" style="display: none">
+                        <ul class="nav navbar-nav"  >
                             <!--volist是tp5的循环标签-->
                             {volist name="cate" id="cate"}
                             <li
@@ -32,7 +29,6 @@
                             ><a href="{:url('index/index',['cate_id'=> $cate.id])}">{$cate.name}</a></li>
                             {/volist}
                         </ul>
-                    </div>
                     <ul class="nav navbar-nav navbar-right">
                         {if $Think.session.user_id}
                         <li><a>{$Think.session.user_name}</a></li>
@@ -57,13 +53,3 @@
                 </div>
             </div>
         </nav>
-        <script>
-            let classShow = document.getElementById('classShow');
-            let SecondClass = document.getElementById('SecondClass');
-            classShow.onmouseover = function () {
-                SecondClass.style.display = 'block';
-            }
-            classShow.onmouseout = function () {
-                SecondClass.style.display = 'none';
-            }
-        </script>
